-- MySQL Script generated by MySQL Workbench
-- Sat May 31 02:58:56 2025
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema gestor_bd
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema gestor_bd
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `gestor_bd` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci ;
USE `gestor_bd` ;

-- -----------------------------------------------------
-- Table `gestor_bd`.`categorias`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `gestor_bd`.`categorias` (
  `id` BIGINT NOT NULL AUTO_INCREMENT,
  `created_at` DATETIME(6) NULL DEFAULT NULL,
  `description` VARCHAR(255) NULL DEFAULT NULL,
  `iva` DOUBLE NOT NULL,
  `name` VARCHAR(255) NULL DEFAULT NULL,
  `updated_at` DATETIME(6) NULL DEFAULT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB
AUTO_INCREMENT = 13
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `gestor_bd`.`usuarios`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `gestor_bd`.`usuarios` (
  `id` BIGINT NOT NULL AUTO_INCREMENT,
  `active` BIT(1) NOT NULL,
  `budget_monthly` DOUBLE NOT NULL,
  `created_at` DATETIME(6) NULL DEFAULT NULL,
  `email` VARCHAR(255) NULL DEFAULT NULL,
  `image_url` VARCHAR(255) NULL DEFAULT NULL,
  `name` VARCHAR(255) NULL DEFAULT NULL,
  `notice_expense` DOUBLE NOT NULL,
  `password` VARCHAR(255) NULL DEFAULT NULL,
  `provider` ENUM('GITHUB', 'GOOGLE', 'LOCAL') NULL DEFAULT NULL,
  `provider_id` VARCHAR(255) NULL DEFAULT NULL,
  `role` TINYINT NULL DEFAULT NULL,
  `updated_at` DATETIME(6) NULL DEFAULT NULL,
  `username` VARCHAR(255) NULL DEFAULT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `UKm2dvbwfge291euvmk6vkkocao` (`username` ASC) VISIBLE,
  UNIQUE INDEX `UKkfsp0s1tflm1cwlj8idhqsad0` (`email` ASC) VISIBLE)
ENGINE = InnoDB
AUTO_INCREMENT = 3
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `gestor_bd`.`gastos`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `gestor_bd`.`gastos` (
  `spent_id` BIGINT NOT NULL AUTO_INCREMENT,
  `created_at` DATETIME(6) NULL DEFAULT NULL,
  `description` VARCHAR(255) NULL DEFAULT NULL,
  `expense_date` DATETIME(6) NULL DEFAULT NULL,
  `icon` VARCHAR(255) NULL DEFAULT NULL,
  `iva` DOUBLE NOT NULL,
  `name` VARCHAR(255) NULL DEFAULT NULL,
  `total` DOUBLE NOT NULL,
  `tipo` ENUM('FACTURA', 'GASTO_GENERICO', 'SUBSCRIPCION', 'TICKET', 'TRANSFERENCIA') NOT NULL,
  `updated_at` DATETIME(6) NULL DEFAULT NULL,
  `categoria_id` BIGINT NULL DEFAULT NULL,
  `user_id` BIGINT NOT NULL,
  PRIMARY KEY (`spent_id`),
  INDEX `FKee11aiipqmu5be57cmydhvlrh` (`categoria_id` ASC) VISIBLE,
  INDEX `FK1h41ni70tt3s7wghnak66feho` (`user_id` ASC) VISIBLE,
  CONSTRAINT `FK1h41ni70tt3s7wghnak66feho`
    FOREIGN KEY (`user_id`)
    REFERENCES `gestor_bd`.`usuarios` (`id`),
  CONSTRAINT `FKee11aiipqmu5be57cmydhvlrh`
    FOREIGN KEY (`categoria_id`)
    REFERENCES `gestor_bd`.`categorias` (`id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `gestor_bd`.`subscripciones`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `gestor_bd`.`subscripciones` (
  `accumulate` DOUBLE NOT NULL,
  `activa` BIT(1) NOT NULL,
  `end` DATETIME(6) NULL DEFAULT NULL,
  `interval_time` INT NOT NULL,
  `restart_day` INT NOT NULL,
  `start` DATETIME(6) NOT NULL,
  `spent_id` BIGINT NOT NULL,
  PRIMARY KEY (`spent_id`),
  CONSTRAINT `FK235yisubk9n6eqov243394f2k`
    FOREIGN KEY (`spent_id`)
    REFERENCES `gestor_bd`.`gastos` (`spent_id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `gestor_bd`.`tickets`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `gestor_bd`.`tickets` (
  `productsjson` JSON NULL DEFAULT NULL,
  `store` VARCHAR(255) NULL DEFAULT NULL,
  `spent_id` BIGINT NOT NULL,
  PRIMARY KEY (`spent_id`),
  CONSTRAINT `FK2uxmqc0gc4ifpk620we7cefu9`
    FOREIGN KEY (`spent_id`)
    REFERENCES `gestor_bd`.`gastos` (`spent_id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
